[package]
name = "replayr"
version = "0.1.0"
edition = "2024"
description = "An API record/replay/simulation proxy"
license = "MIT"
repository = "https://github.com/sagikazarmark/replayr"
homepage = "https://github.com/sagikazarmark/replayr"
publish = false

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["ws", "json"] }
bytes = "1.11"
cel = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
async-stream = "0.3"
futures = "0.3"
http = "1.4"
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1.21", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.26"
